self introduction changed

--- a/src/template.html
+++ b/src/template.html
@@ -76,11 +76,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptatem facilis nemo? Deleniti incidunt culpa in necessitatibus, nulla ex, accusamus architecto mollitia quo modi placeat! Tempora quaerat quae error reprehenderit?
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque iure enim iste nostrum sed itaque corrupti illo, architecto nesciunt quae velit aliquam exercitationem magnam cum, cupiditate provident voluptates quibusdam quia.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="">
