--- a/src/template.html
+++ b/src/template.html
@@ -210,12 +210,12 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Wanna know more about me?</p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:example@email.com"
-            >Call to Action</a
+            >Contact via email</a
           >
         </div>
       </div>
